# riemann-c-client

./: .gitignore  meson.build  meson_options.txt  riemann.proto
lib/riemann/: _private.h  attribute.h  client.c  event.h  message.h  query.h  riemann-client.h.in  simple.h
lib/riemann/client/: tls-gnutls.c  tls.c
src/: riemann-client.c
tests/: check_attributes.c  check_client.c  check_events.c  check_library.c  check_libriemann.c  check_messages.c  check_networked.c  check_queries.c  check_symver.c  mocks.h
